# rollagent

./: .gitignore  ACHIEVEMENT_NOTES.md  CHANGELOG.md  CONTRIBUTING.md  LAUNCH.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: EXAMPLES_20260709.md  USAGE.md
examples/: agent_hook.py
src/rollagent/: __init__.py  cli.py  engine.py  models.py  paths.py  store.py
tests/: test_age_seconds.py  test_clamp_weighted.py  test_engine.py  test_finalize_helpers.py  test_is_terminal.py  test_softmax_extra.py
